--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Configuracoes/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Configuracoes/Index.cshtml
@@ -67,6 +67,9 @@
                 <a class="btn btn-app bg-primary" href="/Apoio/Index">
                     <i class="fas fa-plus-circle"></i> Apoio
                 </a>
+                <a class="btn btn-app bg-primary" href="/Despesa/Index">
+                    <i class="fas fa-plus-circle"></i> Despesas
+                </a>
                 <a class="btn btn-app bg-primary" href="/Organismo/Index">
                     <i class="fas fa-plus-circle"></i> Organismo
                 </a>
