--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -166,31 +166,40 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas  fa-hands-helping nav-icon"></i>
-                                        <p>Atribuir Apóio</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
                                     <a href="/Socio/Index" class="nav-link">
-                                        <i class="fas fa-group nav-icon"></i>
-                                        <p>Todos</p>
+                                        <i class="fas fa-eye nav-icon"></i>
+                                        <p>Visualizar Todos</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
+
                         <li class="nav-item">
-                            <a href="/Pagamento/Index" class="nav-link">
-                                <i class="nav-icon fas fa-money-bill"></i>
+                            <a href="#" class="nav-link nav-principal">
+                                <i class="nav-icon fas fa-hands-helping"></i>
                                 <p>
-                                    Pagamento
-                                    <span class="right badge badge-success">New</span>
+                                    Apoio
+                                    <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="#" onclick="pesquisarPAApoio()" class="nav-link">
+                                        <i class="fas fa-plus-square  nav-icon"></i>
+                                        <p>Atribuir Apoio</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/Apoio/Index" class="nav-link">
+                                        <i class="fas fa-eye nav-icon"></i>
+                                        <p>Visualizar Todos</p>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link nav-principal">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
                                     Dados estatíscos
@@ -219,7 +228,15 @@
 
                             </ul>
                         </li>
-
+                        <li class="nav-item">
+                            <a href="/Pagamento/Index" class="nav-link">
+                                <i class="nav-icon fas fa-money-bill"></i>
+                                <p>
+                                    Pagamentos
+                                    <span class="right badge badge-success">New</span>
+                                </p>
+                            </a>
+                        </li>
 
                         <li class="nav-header">FERRAMENTAS</li>
                         <li class="nav-item">
