--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Relacao/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Relacao/Index.cshtml
@@ -97,7 +97,7 @@
                         <input type="hidden" id="relacaoId" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="nomeRelacao" class="control-label">Nome do Município</label>
+                        <label for="nomeRelacao" class="control-label">Nome da Relação</label>
                         <input id="nomeRelacao" name="nomeRelacao" class="form-control" />
                     </div>
                     <div class="form-group">
