--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Shared/_Layout.cshtml
@@ -191,15 +191,9 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">
-                                        <i class="fas fa-hands-helping nav-icon"></i>
-                                            <p>Atribuir Apóio</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
                                         <a href="/Socio/Index" class="nav-link">
-                                            <i class="fas fa-group nav-icon"></i>
-                                            <p>Todos</p>
+                                        <i class="fas fa-eye nav-icon"></i>
+                                        <p>Visualizar Todos</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -213,9 +207,33 @@
                                     </p>
                                 </a>
                             </li>
-                            
+
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="#" class="nav-link active">
+                                    <i class="nav-icon fas fa-users"></i>
+                                    <p>
+                                        Apoio
+                                        <i class="right fas fa-angle-left"></i>
+                                    </p>
+                                </a>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="#" onclick="pesquisarPAApoio()" class="nav-link">
+                                            <i class="fas  fa-hands-helping nav-icon"></i>
+                                            <p>Atribuir Apoio</p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/Apoio/Index" class="nav-link">
+                                            <i class="fas fa-eye nav-icon"></i>
+                                            <p>Visualizar Todos</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link active">
                                     <i class="nav-icon fas fa-chart-pie"></i>
                                     <p>
                                         Dados estatíscos
